--- a/spring-ioc/build.gradle
+++ b/spring-ioc/build.gradle
@@ -13,5 +13,6 @@ repositories {
 
 dependencies {
     compile(project(":spring-context"))
+    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
